--- a/worker.html
+++ b/worker.html
@@ -6,6 +6,7 @@
         const ipcRenderer = require("electron").ipcRenderer;
 
         ipcRenderer.on("printPDF", (event, content) => {
+            console.log(content)
             document.body.innerHTML = content;
 
             ipcRenderer.send("readyToPrintPDF");
